# glassflow-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yaml  release.yaml
docs/: staging-deployment.md
k8s/: README.md  deployment.yaml  ingress.yaml  service.yaml
k8s/examples/: deployment.yaml  ingress.yaml  service.yaml
src/glassflow_mcp/: __init__.py  __main__.py  cluster.py  config.py  glassflow_client.py  resources.py  server.py  vl_client.py  vm_client.py
src/glassflow_mcp/tools/: __init__.py  diagnostics.py  pipeline.py
tests/: conftest.py  test_cluster_tools.py  test_config.py  test_diagnostics_tools.py  test_pipeline_tools.py  test_server.py
