[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glassflow-mcp"
version = "0.1.0"
description = "MCP server for GlassFlow pipeline management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "glassflow>=4.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
glassflow-mcp = "glassflow_mcp.server:main"
