[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glassflow-mcp"
version = "0.1.0"
description = "MCP server for GlassFlow pipeline management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "glassflow>=4.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[project.scripts]
glassflow-mcp = "glassflow_mcp.server:main"
